fixed spacing and swapped video

--- a/styles/base.css
+++ b/styles/base.css
@@ -50,6 +50,14 @@ li[class^='icon-']:hover {
   color: blue;
 }
 
+aside h3 {
+  margin-bottom: 0px;
+}
+
+aside ul {
+  margin-top: 1px;
+}
+
 .asideLink:before {
   content: ' ';
 }
